--- a/templates/base.html
+++ b/templates/base.html
@@ -3,27 +3,31 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
     <title>SlowTravel</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-<br>
-<div class="container">
-    <a class="blue pull-left" href="{{ url_for('index') }}">Home</a>
-    {% if current_user.is_anonymous %}
-    <a class="blue pull-right" href="{{ url_for('login') }}">Login</a>
-    {% else %}
-    <a class="blue pull-right" href="{{ url_for('user', email=current_user.email) }}">Trips</a>
-    <a class="blue pull-left" href="{{ url_for('logout') }}">Logout</a>
-    {% endif %}
-    <hr>
-    {% with messages = get_flashed_messages() %}
-    {% endwith %}
-    {% block content %}
-    {% endblock %}
+<div class="col-md-12" style="margin: 1%">
+    <nav class="navbar">
+        <a class="btn btn-outline-primary" href="{{ url_for('index') }}">Home</a>
+        {% if current_user.is_anonymous %}
+        <a class="btn btn-outline-primary" href="{{ url_for('login') }}">Login</a>
+        {% else %}
+        <a class="btn btn-outline-primary" href="{{ url_for('user', email=current_user.email) }}">Trips</a>
+        <a class="btn btn-outline-primary" href="{{ url_for('logout') }}">Logout</a>
+        {% endif %}
+        <hr>
+        {% with messages = get_flashed_messages() %}
+        {% endwith %}
+    </nav>
 </div>
+        {% block content %}
+        {% endblock %}
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
 </html>
